WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38089
Typo in Geolocation code causes crashes when updates are stopped
https://bugs.webkit.org/show_bug.cgi?id=38089
Summary
Typo in Geolocation code causes crashes when updates are stopped
Steve Falkenburg
Reported
2010-04-24 22:58:44 PDT
Typo in Geolocation code causes crashes when updates are stopped
Attachments
Patch
(1.39 KB, patch)
2010-04-24 23:37 PDT
,
Steve Falkenburg
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Steve Falkenburg
Comment 1
2010-04-24 23:37:40 PDT
Created
attachment 54231
[details]
Patch
Sam Weinig
Comment 2
2010-04-24 23:39:54 PDT
Comment on
attachment 54231
[details]
Patch r=me
Steve Falkenburg
Comment 3
2010-04-24 23:47:16 PDT
Committed
r58226
: <
http://trac.webkit.org/changeset/58226
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug