2010-04-24  Steve Falkenburg  <sfalken@apple.com>

Reviewed by Sam Weinig.

        Typo in Geolocation code causes crashes when updates are stopped
        https://bugs.webkit.org/show_bug.cgi?id=38089
        <rdar://problem/7904104> Crash closing geolocation tab after allowing to use geolocation

        * WebCoreSupport/WebGeolocationControllerClient.cpp:
        (WebGeolocationControllerClient::stopUpdating): Call unregister instead of register.


Canonical link: https://commits.webkit.org/49506@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58226 268f45cc-cd09-0410-ab3c-d52691b4dbfc